--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -844,6 +844,9 @@ RSA host key generation can be re-enabled by setting `sshd_rsa_enable="YES"` in
 gitref:0aabcd75dbc2[repository=src]
 {{< sponsored "Amazon" >}}
 
+FreeBSD {releaseCurrent} now supports Google Cloud Compute Engine C4 machines.
+gitref:7b32f4f0a7fe[repository=src] {{< sponsored "Google" >}}
+
 [[kernel]]
 == Kernel
 
