--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -790,6 +790,10 @@ man:syscons[4] is not compatible with UEFI, does not support UTF-8, and is Giant
 There is no specific timeline yet for removing it, but support for the Giant lock is expected to go away in one or two major release cycles.
 gitref:8c922db4f3d9[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
+The `shar` utility has been removed.
+It lives on as a port at pkg:sysutils/freebsd-shar[].
+gitref:3fde39073c72[repository=src]
+
 The cryptographically weak DSA signature algorithm was removed from OpenSSH, following upstream.
 
 The man:publickey[5] database has been removed,
@@ -1159,6 +1163,9 @@ gitref:4c736cfc69a7[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 The man:firewire[4] bus and related drivers have been deprecated and planned for removal in FreeBSD 16.0.
 gitref:fc889167c319[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+
+The man:le[4] Ethernet driver has been deprecated and planned for removal in FreeBSD 16.0.
+gitref:e4d6433e9c03[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 man:syscons[4] has been planned for removal in future releases, and has been noted as deprecated in the man pages to notify users to migrate to man:vt[4].
 gitref:2bc5b1d60512[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
