--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1571,6 +1571,9 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 Manual pages on filesystems have been moved to section four, the Kernel Interfaces Manual.
 gitref:1687d77197c0[repository=src]
 
+The man:builtin[1] manual has been rewritten featuring streamlined information and a new section on keybindings that are built into the FreeBSD CLI.
+gitref:42df4faf7004[repository=src]
+
 A new man:networking[7] manual page provides a quickstart guide to connecting the system to networks including Wi-Fi, and links to other manual pages and the handbook.
 gitref:39f92a4c4c49[repository=src]
 
