--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -34,14 +34,8 @@ This document contains the release notes for FreeBSD {releaseCurrent}.
 It describes recently added, changed, or deleted features of FreeBSD.
 It also provides some notes on upgrading from previous versions of FreeBSD.
 
-The {releaseType} distribution to which these release notes apply represents the latest point along the {releaseBranch} development branch since {releaseBranch} was created.
+The {releaseType} distribution to which these release notes apply represents the latest point along the {releaseBranch} development branch between {releasePrev} and the future {releaseNext}.
 Information regarding pre-built, binary {releaseType} distributions along this branch can be found at https://www.FreeBSD.org/releases/[].
-
-The {releaseType} distribution to which these release notes apply represents a point along the {releaseBranch} development branch between {releasePrev} and the future {releaseNext}.
-Information regarding pre-built, binary {releaseType} distributions along this branch can be found at https://www.FreeBSD.org/releases/[].
-
-This distribution of FreeBSD {releaseCurrent} is a {releaseType} distribution.
-It can be found at https://www.FreeBSD.org/releases/[] or any of its mirrors.
 More information on obtaining this (or other) {releaseType} distributions of FreeBSD can be found in the link:{handbook}/mirrors[Obtaining FreeBSD appendix] to the link:{handbook}/[FreeBSD Handbook].
 
 All users are encouraged to consult the release errata before installing FreeBSD.
