--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -425,6 +425,11 @@ The `FreeBSD-base` repository is now defined in `/etc/pkg/FreeBSD.conf`, disable
 Systems which installed with pkgbase prior to 15.0-RC1 (if running `releng/15.0`) or November 15th (if running from `stable`/`main` snapshots) will need to remove the definition of the `FreeBSD-base` repository from `/usr/local/etc/pkg/repos/` and replace it with a single line `FreeBSD-base: { enabled: yes }`.
 gitref:5d832135a971[repository=src]
 
+The man:powerd[8] utility is now enabled in `/etc/rc.conf` by default on images for
+the arm64 Raspberry Pi's (`arm64-aarch64-RPI` files).
+This prevents the CPU clock from running slow all the time.
+gitref:4347ef60501f[repository=src]
+
 [[userland-programs]]
 === Userland Application Changes
 
@@ -520,6 +525,23 @@ gitref:23fbea8cf2f3[repository=src]
 The man:bsdconfig[8] and man:bsdinstall[8] utilities now use man:bsddialog[1] instead of GNU dialog.
 gitref:c36b3dbc99d1[repository=src],
 gitref:04b465777a09[repository=src]
+
+The man:jail[8] command now supports the `zfs.dataset` parameter to attach a list of ZFS datasets to a jail.
+gitref:e0dfe185cbca[repository=src]
+
+The `rc.d/jail` startup script now supports the legacy variable `jail_${jailname}_zfs_dataset` to allow unmaintained jail managers like `ezjail` to leverage the new `zfs.dataset` feature (see above).
+gitref:0b49e504a32d[repository=src]
+
+The man:newsyslog[8] utility now supports specifying a global compression method directly at the beginning of the `newsyslog.conf` file.
+All historical compression flags (`J`, `X`, `Y`, `Z`) then behave as indicating "treat the file as compressible" instead of "compress the file with that specific method.".
+The following methods are available:
+
+* `none`: Never compress.
+* `legacy`: Historical behavior (`J`=bzip2, `X`=xz, `Y`=zstd, `Z`=gzip).
+* `bzip2`, `xz`, `zstd`, `gzip`: apply the specified compression method.
+gitref:61174ad88e33[repository=src],
+gitref:906748d208d3[repository=src],
+gitref:39d668f1e09e[repository=src]
 
 [[userland-contrib]]
 === Contributed Software
@@ -974,6 +996,9 @@ This section covers changes and additions to devices and device drivers since {r
 
 [[drivers-device]]
 === Device Drivers
+
+The man:tty[4] terminal interface now has the `IUTF8` flag, which enables proper UTF-8 backspacing handling, set by default, suiting the default UTF-8 locale.
+gitref:bb830e346bd5[repository=src]
 
 A driver is available for man:ice[4] Ethernet network controllers in the Intel E800 series, which support 100 Gb/s operation.
 It was upgraded to version 1.43.2-k.
