--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -74,7 +74,7 @@ Upgrading FreeBSD should only be attempted after backing up _all_ data and confi
 [[security-errata]]
 == Included Security Fixes and Errata Patches
 
-This section lists the various Security Advisories and Errata Notices since {releasePrev} that are fixed in {releaseCurrent}.
+This section lists the various Security Advisories and Errata Notices since {releasePrev} that have been addressed in {releaseCurrent}.
 
 [[security]]
 === Fixed Security Advisories
@@ -1317,7 +1317,7 @@ The BIOS boot loader added back support for gzip and bzip2, but removed support 
 (The EFI boot loader is unchanged with support for all of those.)
 gitref:4d3b05a8530e[repository=src] {{< sponsored "Netflix" >}}
 
-The BIOS boot loader will now use the SMBIOS v3 (64-bit) entry point if its table is below 4GB.
+The BIOS boot loader can now use the SMBIOS v3 (64-bit) entry point if its table is below 4GB.
 The BIOS boot loader is compiled 32-bit as a client of BTX even on amd64, so cannot access addresses beyond 4GB.
 However, the 64-bit entry point may refer to a structure table below 4GB, which can be used if the BIOS does not provide a 32-bit entry point, as happens on Hetzner virtual machines.
 gitref:7f005c6699f4[repository=src]
@@ -1531,10 +1531,7 @@ Many improvements to the audio stack including support for hot-swapping in man:m
 gitref:cf9d2fb18433[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 gitref:7224e9f2d4af[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-A new utility man:sndctl[8] has been added to concentrate the various
-interfaces for viewing and manipulating audio device settings (sysctls,
-`/dev/sndstat`), into a single utility with a similar control-driven
-interface to that of `mixer(8)`.
+A new utility man:sndctl[8] has been added to concentrate the various interfaces for viewing and manipulating audio device settings (sysctls, `/dev/sndstat`), into a single utility with a similar control-driven interface to that of `mixer(8)`.
 gitref:44e5a0150835[repository=src],
 gitref:9a37f1024ceb[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
