--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1161,7 +1161,7 @@ gitref:fc889167c319[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 The man:le[4] Ethernet driver has been deprecated and planned for removal in FreeBSD 16.0.
 gitref:e4d6433e9c03[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-man:syscons[4] has been planned for removal in future releases, and has been noted as deprecated in the man pages to notify users to migrate to man:vt[4].
+man:syscons[4] has been planned for removal in future releases, and has been noted as deprecated in the manual pages to notify users to migrate to man:vt[4].
 gitref:2bc5b1d60512[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 The man:upgt[4] USB 802.11g driver has been deprecated and planned for removal in FreeBSD 16.0.
@@ -1368,7 +1368,7 @@ gitref:6df9fa1c6b83[repository=src] and others
 The netgraph man:ng_ipfw[4] module no longer truncates cookies to 16 bits, allowing a full 32 bits.
 gitref:dadf64c5586e[repository=src]
 
-AIM(Adaptive Interrupt Moderation) support has been added to the man:igc[4] driver.
+AIM (Adaptive Interrupt Moderation) support has been added to the man:igc[4] driver.
 gitref:472a0ccf847a[repository=src] {{< sponsored "Rubicon Communications, LLC (\"Netgate\") and BBOX.io" >}}
 
 This feature has also been added to the man:lem[4], man:em[4] and man:igb[4] drivers.
@@ -1379,9 +1379,8 @@ Teach man:ip6addrctl[8] to attach and run itself in a jail.
 This will make it easier to manage address selection policies of vnet jails, especially for those light weighted OCI containers or slim jails.
 gitref:b709f7b38cc4[repository=src]
 
-Convert `PF_DEFAULT_TO_DROP` into a vnet loader tunable 'net.pf.default_to_drop' for man:pf[4].
-gitref:7f7ef494f11d[repository=src] introduced a compile time option `PF_DEFAULT_TO_DROP` to make the man:pf[4] default rule to drop.
-While this change exposes a vnet loader tunable 'net.pf.default_to_drop' so that users can change the default rule without re-compiling the man:pf[4] module.
+The man:pf[4] packet filter has learned a new runtime man:loader.conf[5] tunable, 'net.pf.default_to_drop', as well as a compile time option, `PF_DEFAULT_TO_DROP`, making the default rule to drop.
+gitref:7f7ef494f11d[repository=src],
 gitref:3965be101c43[repository=src]
 
 A new man:pf[4] route-to pool option "prefer-ipv6-nexthop" allows for routing IPv4 packets over IPv6 gateways.
@@ -1560,7 +1559,7 @@ gitref:5a31c623143f[repository=src]
 This section covers changes to manual (man:man[1]) pages and other documentation shipped with the base system.
 
 [[man-pages]]
-=== Man Pages
+=== Manual Pages
 
 Manual pages on filesystems have been moved to section four, the Kernel Interfaces Manual.
 gitref:1687d77197c0[repository=src]
