--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -392,6 +392,14 @@ This section lists the various Security Advisories and Errata Notices since {rel
 |man:freebsd-update[8] installs libraries in incorrect order
 |===
 
+[[architectures]]
+== Architectures
+
+The venerable 32-bit hardware platforms i386, armv6, and 32-bit powerpc have been retired.
+32-bit application support lives on via the 32-bit compatibility mode in their respective 64-bit platforms.
+The armv7 platform remains as the last supported 32-bit platform.
+We thank them for their service.
+
 [[userland]]
 == Userland
 
@@ -986,9 +994,6 @@ gitref:d390633cf8cf[repository=src]
 On amd64, handling of the `%fsbase`/`%gsbase` registers and tls base were reworked, making it more useful for apps that directly manipulate CPU context.
 gitref:68ba38dad3[repository=src]
 {{< sponsored "the FreeBSD Foundation" >}}
-
-The venerable i386, armv6, and powerpc platforms have been retired.
-We thank them for their service.
 
 [[drivers]]
 == Devices and Drivers
