--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -793,7 +793,7 @@ There is no specific timeline yet for removing it, but support for the Giant loc
 gitref:8c922db4f3d9[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 The `shar` utility has been removed.
-It lives on as a port at pkg:sysutils/freebsd-shar[].
+It lives on as a port at package:sysutils/freebsd-shar[].
 gitref:3fde39073c72[repository=src]
 
 The cryptographically weak DSA signature algorithm was removed from OpenSSH, following upstream.
