--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1287,7 +1287,7 @@ gitref:a15f7c96a276[repository=src],
 gitref:66b5296f1b29[repository=src]
 {{< sponsored "Chelsio Communications" >}}
 
-Add support for dynamicly resizing NVMe namespaces.
+Add support for dynamically resizing NVMe namespaces.
 The man:nvd[4] and man:nda[4] drivers now notify geom of sizes changes in real time.
 gitref:86d3ec359a56[repository=src]
 {{< sponsored "Netflix" >}}
