--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -565,6 +565,10 @@ gitref:04b465777a09[repository=src]
 The man:jail[8] command now supports the `zfs.dataset` parameter to attach a list of ZFS datasets to a jail.
 gitref:e0dfe185cbca[repository=src]
 
+The man:jail[8] command now supports meta and env parameters, which are arbitrary strings associated with a jail. These parameters can be used to tag jails with specific metadata, or to pass information securely to be accessed inside a jail. They can be added at jail creation, or modified later using man:jail[8].
+gitref:30e6e008bc06[repository=src]
+{{< sponsored "SkunkWerks, GmbH" >}}
+
 The `rc.d/jail` startup script now supports the legacy variable `jail_${jailname}_zfs_dataset` to allow unmaintained jail managers like `ezjail` to leverage the new `zfs.dataset` feature (see above).
 gitref:0b49e504a32d[repository=src]
 
@@ -918,10 +922,10 @@ Support legacy PCI hotplug on arm64.
 gitref:355f02cddbf0[repository=src].
 {{< sponsored "Arm Ltd" >}}
 
-Jails can now be accessed via jail descriptors in jail_set(2) and jail_get(2), as well as the new jail_attach_jd(2) and jail_remove_jd(2).  They allow manipulation of jails through the file descriptor interface without the race conditions inherent in jail IDs, and can also optionally control jail lifetime.
+Jails can now be accessed via jail descriptors in man:jail_set[2] and man:jail_get[2], as well as the new `jail_attach_jd(2)` and `jail_remove_jd(2)` syscalls.  They allow manipulation of jails through the file descriptor interface without the race conditions inherent in jail IDs, and can also optionally control jail lifetime.
 gitref:851dc7f859c2[repository=src]
 
-Jails and jail descriptors now have associated kevent(2) filters that allow tracking jail creation, changes, attachment, and removal.
+Jails and jail descriptors now have associated man:kevent[2] filters that allow tracking jail creation, changes, attachment, and removal.
 gitref:1bd74d201a53[repository=src]
 gitref:9d7f89ef2607[repository=src]
 
