--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -85,7 +85,7 @@ The recommended, and most secure approach, is using the source tree checkout of 
 Users who do not have up to date sources installed may use a less secure, but simpler approach, validating the checksums after installation. As these are architecture-independent files, the checksums will match on all platforms.
 
 ....
-# pkg add -f https://pkg.freebsd.org/FreeBSD:15:(uname -p)/base_release_0/FreeBSD-pkg-bootstrap-15.0.pkg
+# pkg add -f https://pkg.freebsd.org/FreeBSD:15:$(uname -p)/base_release_0/FreeBSD-pkg-bootstrap-15.0.pkg
 # sha256 -r /etc/pkg/FreeBSD.conf /usr/share/keys/pkg/trusted/pkg.freebsd.org.2013102301 \
   /usr/share/keys/pkgbase-15/trusted/awskms-15 /usr/share/keys/pkgbase-15/trusted/backup-signing-15
 ab261a3b84ffc11654ac0bafbb7d6b3f1b6afc30bfabab3bcff64259678eac26 /etc/pkg/FreeBSD.conf
