--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1604,6 +1604,9 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 [[man-pages]]
 === Manual Pages
 
+A new man:freebsd-base[7] manual provides details on the layout of base system packages and how to update a system with them.
+gitref:e1632b827b1a[repository=src]
+
 Manual pages on filesystems have been moved to section four, the Kernel Interfaces Manual.
 gitref:1687d77197c0[repository=src]
 
