handbook/cutting-edge: Fix a command typo
Signed-off-by: ykla yklaxds@gmail.com
Sponsored by: Chinese FreeBSD Community

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1373,7 +1373,7 @@ Ignore the mismatch and continue? [y/N]:
 
 Check and confirm that.
 
-To check if the upgrade was successful, run `freebsd-version -ku`.
+To check if the upgrade was successful, run `freebsd-version -kru`.
 
 Then reboot.
 
