--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -578,7 +578,8 @@ The following methods are available:
 
 * `none`: Never compress.
 * `legacy`: Historical behavior (`J`=bzip2, `X`=xz, `Y`=zstd, `Z`=gzip).
-* `bzip2`, `xz`, `zstd`, `gzip`: apply the specified compression method.
+* `bzip2`, `xz`, `zstd`, `gzip`: Apply the specified compression method.
+
 gitref:61174ad88e33[repository=src],
 gitref:906748d208d3[repository=src],
 gitref:39d668f1e09e[repository=src]
@@ -1048,7 +1049,7 @@ A driver is available for man:ice[4] Ethernet network controllers in the Intel E
 It was upgraded to version 1.43.2-k.
 gitref:38a1655adcb3[repository=src] {{< sponsored "Intel Corporation" >}}
 
-Numerous stability improvements have been in the man:iwlwifi[4] driver for Intel Wi-Fi devices.
+Numerous stability improvements have gone into the man:iwlwifi[4] driver for Intel Wi-Fi devices.
 {{< sponsored "The FreeBSD Foundation" >}}
 
 Multiple PCI MCFG regions are now supported on amd64, allowing PCI configuration space access for domains (segments) other than 0.
@@ -1148,7 +1149,7 @@ gitref:0f1bf1c22a0c[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 man:smbios[4] now searches for the SMBIOS v3 (64-bit) entry point first also if booted from BIOS.
 This allows to detect and report the proper SMBIOS version with BIOSes that only provide the v3 table, as happens on Hetzner virtual machines.
-For machines that provide both, leverage the v3 table in priority consistently with the EFI case.
+For machines that provide both, leverage the v3 table in priority consistently with the case of EFI boot.
 gitref:bc7f6508363c[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
@@ -1215,6 +1216,38 @@ gitref:7f8a5c5a1585[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 This section covers changes and additions to file systems and other storage subsystems, both local and networked.
 
+[[storage-general]]
+=== General Storage
+
+Add Solaris style extended attributes (called named attributes in NFSv4).
+At this time, only ZFS, specifically filesystem datasets that have their `xattr` property set to `dir`, and NFSv4 support them.
+The attributes are presented in a directory as regular files.
+See man:named_attribute[7] for more information.
+gitref:2ec2ba7e232d[repository=src],
+gitref:df58e8b1506f[repository=src],
+gitref:f61844833ee8[repository=src],
+gitref:b1b607bd200f[repository=src],
+gitref:ee95e4d02dbd[repository=src]
+
+Add support for accessing remote NVMe over Fabrics controllers over the TCP transport.
+New commands added to man:nvmecontrol[8] are used to establish connections to remote controllers.
+Once connections are established they are handed off to the man:nvmf[4] kernel module which creates `nvme__X__` devices and exports remote namespaces as man:nda[4] disks.
+gitref:a1eda74167b5[repository=src],
+gitref:1058c12197ab[repository=src]
+{{< sponsored "Chelsio Communications" >}}
+
+Add support for exporting namespaces to remote NVMe over Fabrics hosts over the TCP transport.
+The man:nvmft[4] kernel module adds a new frontend to the CAM target layer which exports man:ctl[4] LUNs as NVMe namespaces to remote hosts.
+The man:ctld[8] daemon now supports NVMe controllers in addition to iSCSI targets and is responsible for accepting incoming connection requests and handing off connected queue pairs to man:nvmft[4].
+gitref:a15f7c96a276[repository=src],
+gitref:66b5296f1b29[repository=src]
+{{< sponsored "Chelsio Communications" >}}
+
+Add support for dynamically resizing NVMe namespaces.
+The man:nvd[4] and man:nda[4] drivers now notify geom of sizes changes in real time.
+gitref:86d3ec359a56[repository=src]
+{{< sponsored "Netflix" >}}
+
 [[storage-nfs]]
 === NFS
 
@@ -1244,6 +1277,12 @@ The man:mountd[8] server has been modified to use man:strunvis[3] to decode dire
 This allows special characters, such as blanks, to be embedded in the directory name.
 `vis -M` may be used to encode such directory names; see man:vis[1].
 gitref:2c83f1ada435[repository=src]
+
+Allow to specify as many groups as configured to be supported by the system in `-maproot` or `-mapall` options in  man:exports[5].
+Previously, the cap was `NGROUPS_MAX + 1`, where `NGROUPS_MAX` is just the minimum maximum of the number of allowed supplementary groups.
+Now use the proper `{NGROUPS_MAX} + 1` value, with `{NGROUPS_MAX}` being fetched at runtime via man:sysconf[3].
+gitref:e87848a8150e[repository=src]
+{{< sponsored "The FreeBSD Foundation" >}}
 
 New man:sysctl[8] variables have been added under `kern.rpc.unenc` and `kern.rpc.tls`, which allow an NFS server administrator to determine how much NFS-over-TLS is being used.
 A large number of failed handshakes might indicate an NFS configuration problem.
@@ -1292,44 +1331,6 @@ Support for vinum volumes has been removed.
 gitref:f87bb5967670[repository=src],
 gitref:e51036fbf3f8[repository=src]
 
-[[storage-general]]
-=== General Storage
-
-Add Solaris style extended attributes (called named attributes in NFSv4).
-At this time, only ZFS when the ZFS property called xattr=dir and NFSv4 support them.
-The attributes are presented in a directory as regular files.
-See named_attribute(7) for more information.
-gitref:2ec2ba7e232d[repository=src],
-gitref:df58e8b1506f[repository=src],
-gitref:f61844833ee8[repository=src],
-gitref:b1b607bd200f[repository=src],
-gitref:ee95e4d02dbd[repository=src]
-
-Allow to specify as many groups as configured to be supported by the system in `-maproot` or `-mapall` options in  man:exports[5].
-Previously, the cap was `NGROUPS_MAX + 1`, where `NGROUPS_MAX` is just the minimum maximum of the number of allowed supplementary groups.
-Now use the proper `{NGROUPS_MAX} + 1` value, with `{NGROUPS_MAX}` being fetched at runtime via man:sysconf[3].
-gitref:e87848a8150e[repository=src]
-{{< sponsored "The FreeBSD Foundation" >}}
-
-Add support for accessing remote NVMe over Fabrics controllers over the TCP transport.
-New commands added to man:nvmecontrol[8] are used to establish connections to remote controllers.
-Once connections are established they are handed off to the man:nvmf[4] kernel module which creates `nvme__X__` devices and exports remote namespaces as man:nda[4] disks.
-gitref:a1eda74167b5[repository=src],
-gitref:1058c12197ab[repository=src]
-{{< sponsored "Chelsio Communications" >}}
-
-Add support for exporting namespaces to remote NVMe over Fabrics hosts over the TCP transport.
-The man:nvmft[4] kernel module adds a new frontend to the CAM target layer which exports man:ctl[4] LUNs as NVMe namespaces to remote hosts.
-The man:ctld[8] daemon now supports NVMe controllers in addition to iSCSI targets and is responsible for accepting incoming connection requests and handing off connected queue pairs to man:nvmft[4].
-gitref:a15f7c96a276[repository=src],
-gitref:66b5296f1b29[repository=src]
-{{< sponsored "Chelsio Communications" >}}
-
-Add support for dynamically resizing NVMe namespaces.
-The man:nvd[4] and man:nda[4] drivers now notify geom of sizes changes in real time.
-gitref:86d3ec359a56[repository=src]
-{{< sponsored "Netflix" >}}
-
 [[boot-loader]]
 == Boot Loader Changes
 
@@ -1376,8 +1377,7 @@ In other words, the 32-bit entry point is provided for compatibility, so it is a
 gitref:3f744fb8b2c5[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
-The EFI boot loader now favors the SMBIOS v3 (64-bit) entry point.
-Consistently with what is done with BIOS boot.
+The EFI boot loader now favors the SMBIOS v3 (64-bit) entry point, consistently with what is done with BIOS boot.
 There is a difference though: As the EFI loader runs in 64-bit mode on 64-bit platforms, there is no restriction that the v3 entry point's structure table should be below 4GB.
 gitref:96f77576e9ea[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
